--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
+    "react-preloaders": "^3.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -26,6 +27,7 @@
     "sass": "^1.49.9",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
+    "use-position": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
